--- a/EduHomeUI/Views/Checkout/Index.cshtml
+++ b/EduHomeUI/Views/Checkout/Index.cshtml
@@ -2,31 +2,46 @@
 @model ProductEntity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<table class="table table-responsive table-light table-bordered" style="width: 100%">
-    <tr>
-        <th>Product Name</th>
-        <th>Product Price</th>
-        <th>Product Quantity</th>
-        <th>Product Image</th>
-        <th>Total</th>
-    </tr>
-    <tr>
-        <td>@Model.Product</td>
-        <td>@Model.Price</td>
-        <td>@Model.Quantity</td>
-        <td><img src="/@Model.ImagePath" style="width:130px; height:150px;" /></td>
-        <td>@(Model.Price * Model.Quantity)</td>
-    </tr>
-</table>
-<br />
+@if (Model == null)
+{
+    <div class="alert alert-info">
+        The checkout basket is empty.
+    </div>
+}
+else
+{
+    <div class="table-responsive">
+        <table class="table table-bordered table-striped">
+            <thead class="thead-light">
+                <tr>
+                    <th style="width: 30%;">Product Name</th>
+                    <th style="width: 15%;">Product Price</th>
+                    <th style="width: 15%;">Product Quantity</th>
+                    <th style="width: 20%;">Product Image</th>
+                    <th style="width: 20%;">Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>@Model.Product</td>
+                    <td>$@Model.Price</td>
+                    <td>@Model.Quantity</td>
+                    <td>
+                        <img src="/@Model.ImagePath" style="max-width: 130px; max-height: 150px;" />
+                    </td>
+                    <td>$@(Model.Price * Model.Quantity)</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <br />
 
-<form method="post" asp-action="Checkout" asp-controller="Checkout">
-    <input type="hidden" name="product.Product" value="@Model.Product" />
-    <input type="hidden" name="product.Price" value="@Model.Price" />
-    <input type="hidden" name="product.Quantity" value="@Model.Quantity" />
-    <input type="hidden" name="product.ImagePath" value="@Model.ImagePath" />
+    <form method="post" asp-action="Checkout" asp-controller="Checkout">
+        <input type="hidden" name="product.Product" value="@Model.Product" />
+        <input type="hidden" name="product.Price" value="@Model.Price" />
+        <input type="hidden" name="product.Quantity" value="@Model.Quantity" />
+        <input type="hidden" name="product.ImagePath" value="@Model.ImagePath" />
 
-    <p>
         <button type="submit" class="btn btn-primary">Checkout</button>
-    </p>
-</form>
+    </form>
+}
