--- a/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
+++ b/EduHomeUI/Areas/EHMasterPanel/Views/Shared/_AdminLayout.cshtml
@@ -450,6 +450,7 @@
                                 <li><a asp-controller="Setting" asp-action="Index">Settings</a></li>
                                 <li><a asp-controller="Slider" asp-action="Index">Sliders</a></li>
                                 <li><a asp-controller="Subscribers" asp-action="Index">Subscribers</a></li>
+                                <li><a asp-controller="EnrolledStudents" asp-action="Index">EnrolledStudents</a></li>
                             </ul>
                         </li>
                     </ul>
